# show-me-ai

./: .env.example  .gitignore  .mcp.json  .vercelignore  CLAUDE.md  DATABASE_SCHEMA.md  README.md  langgraph.json  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: daily-scrape-house.yml  daily-scrape-senate.yml  daily-scrape.yml
agent/: graph.ts  index.ts  prompt.ts  tools.py  tools.ts
agent/tools/: getBillByNumber.ts  getBillTimeline.ts  getCommitteeHearings.ts  getCommitteeInfo.ts  getLegislatorBills.ts  getLegislatorInfo.ts  index.ts  searchBillsByMilestone.ts  searchBillsByYear.ts  searchBillsSemantic.ts  utils.ts
app/: globals.css  page.tsx  seal-animation.css
app/chat/: page.tsx
app/lib/: db.ts
app/types/: bill.ts
database/: client.ts  types.ts
database/migrations/: 013_add_fuzzy_legislator_search.sql  017_fix_ivfflat_probes.sql  README.md  add_hearing_time_text.sql  create_bill_embeddings.sql  fix_match_bill_embeddings_for_langchain.sql
ingestion/: cli.ts  db_utils.py  generate_all_embeddings.py  scrape_all_sessions.py
ingestion/bills/: README.md  actions.ts  bills.ts  documents.ts  embeddings.ts  hearings.ts  scrape_mo_house_bills.py  scraper.ts  sponsors.ts  types.ts
ingestion/database/: client.ts
ingestion/embeddings/: __init__.py  chunking.py  chunking.ts  embeddings_pipeline.py  pipeline.ts
ingestion/house/: bills.ts  legislators.ts  scraper.ts
ingestion/legislators/: README.md  __init__.py  scrape_mo_legislators.py  scraper.ts
ingestion/senate/: actions.ts  bills.ts  documents.ts  (+3 more)
(+29 files in other folders)
