[project]
name = "mo-bills"
version = "0.1.0"
description = "Scraper for Missouri House of Representatives bills"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.40.0",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.2",
]

[project.scripts]
scrape-mo-bills = "ingestion.bills.scrape_mo_house_bills:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]

[tool.uv]
dev-dependencies = []
